--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -1,11 +1,23 @@
 {
-    "manifest_version": 2,
-    "name": "OnlyFans Blocker",
-    "version": "1.0",
-    "description": "Blocks Twitter users with OnlyFans links in their bio",
-    "permissions": ["webRequest", "webNavigation", "webRequestBlocking", "*://*.twitter.com/*"],
-    "background": {
-      "scripts": ["background.js"]
-    },
-    "run_at": "document_end"
+  "manifest_version": 2,
+  "name": "OnlyFans Blocker",
+  "version": "1.0",
+  "description": "Blocks Twitter users with OnlyFans links in their bio",
+  "permissions": [
+    "webRequest",
+    "webNavigation",
+    "webRequestBlocking",
+    "*://*.twitter.com/*",
+    "storage"
+  ],
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
+  },
+  "run_at": "document_end",
+  "options_ui": {
+    "page": "options/options.html",
+    "open_in_tab": true
   }
+}
